--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,9 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>Kyles Profile</title>
       <script src='main.js'></script>
+      <link rel="preconnect" href="https://fonts.gstatic.com"> 
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
       <link rel="stylesheet" href="Styles/journey.css">
       <link rel="stylesheet" href="Styles/about.css">
       <link rel="stylesheet" href="Styles/main.css">
@@ -44,19 +47,18 @@
                   </ul>
                </div>
             </nav>
-            <br><br><br><br>
+           <br><br><br><br><br><br><br>
             <div class="Text-box">
               <div class="bold">
            I AM
           </div>
-           <h1>KYLE MCBRYNE</h1>
+           <h1>KYLE MC BRYNE</h1>
            <h3>A Young and Aspiring Full Stack Developer</h3>
            <div class="landing">
-           You can explore more about my life experiences here.
+           You can explore more about my life and experiences here.
             </div>
             <br><br>
-            <button class="button button1" href="#about">About Me</button>
-            <button class="button button2">Contact Me</button>
+            
          </header>
       </div>
     <!-- <hr style="width: 10%;margin-left: 800px;" > -->
@@ -73,11 +75,19 @@
                       <div class="layer_content">
                           <div class="section_title">
                               <h1>Kyle Mc Bryne</h1>
-                              <h2>Aspiring<strong> Full Stack Developer</strong></h2>
+                              <h2><u>Aspiring<strong> Full Stack Developer</u></strong></h2>
+                              <br><hr><br>
                               <div class="heading_line"><span></span></div>
-                              <p>A few words from people that worked with me or that I have experiences with. </p>
+                              <p>I am a dedicated,hard-working individual who is a fast learner.I am calm and respectful and willing to learn new things in order to achieve my goals.<br><br>My passion for coding came from a great experience where i was given the chance to be able to manage a companies website and I found my self enjoying it more than I thought.<br><br>In my free time often find myself playing games,reading,watching Anime and occasionally putting my role playing face on to play some Dungeons & Dragons with family and friends.</p>
+                              <br><br>
+                             <h3><u>Personal Details:</u></h3>
+                             <ul>
+                               <li><b>Date of birth :</b><p> 24/09/1998</p></li>
+                               <li><b>Nationality :</b><p> South African</p></li>
+                               <li><b>Phone number :</b><p> 0769815243</p></li>
+                             </ul>
+           
                           </div>
-                          <a href="contact.html">Contact Us<i class="icofont-long-arrow-right"></i></a>
                       </div>
                   </div>
               </div>
@@ -87,6 +97,9 @@
                         <div class="background_layer"></div>
                         <div class="layer_content">
                           <img src="Styles/Images/rsz_kyle1.png" alt="me" width="300px" height="300px" style="border-radius: 50%;">
+                          <br><br><br>
+                          <a href="/"><button class="bn30">Button</button></a>
+                          <a href="/"><button class="bn30">Button</button></a>
                           </div>
                           </div>
                           </div>
